// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`alert editor interactions > loads populated alert and registry fixture data 1`] = `
{
  "actionEditors": [
    {
      "role": "triggers-yaml-editor",
      "value": "- trigger: state
  entity_id: binary_sensor.front_door
",
    },
    {
      "role": "conditions-yaml-editor",
      "value": "- condition: state
  entity_id: binary_sensor.front_door
  state: on
  for: 00:05:00
",
    },
    {
      "role": "post-send-actions",
      "value": "- action: logbook.log
  data:
    name: Front door alert
",
    },
    {
      "role": "post-confirmation-actions",
      "value": "- action: light.turn_on
  target:
    entity_id:
      - light.hall
",
    },
  ],
  "conditionRows": 0,
  "confirmationEnabled": true,
  "intervalEnabled": undefined,
  "name": "Front door open",
  "selectedRecipients": [
    "Main phoneRemove",
    "PhoneRemove",
  ],
}
`;

exports[`alert editor interactions > opens template help in a modal from the notification section 1`] = `
"<section role="dialog" aria-modal="true" class="nc-modal nc-template-help-modal">
          <header class="nc-modal-header">
            <h2>Notification templates and helpers</h2>
            <ha-notifications-button class="nc-icon-button"></ha-notifications-button>
          </header>
          <main class="nc-modal-body"><div class="nc-help">
          Recipients on selected devices, areas, floors, and labels receive
          direct notifications through Home Assistant's standard Notify
          service. Give conditions an ID in the Condition view, then use that
          ID in the message or title to choose text. For example:
          <code>{% if condition.front_door %}Door open{% elif
            condition.garage %}Garage open{% else %}All clear{% endif %}</code>.
        </div>
        <div class="nc-help">
          <code>alert_id</code>, <code>alert_name</code>,
          <code>alert_active</code>, <code>attempt</code>,
          <code>trigger</code>, <code>now</code>, and
          <code>condition.&lt;id&gt;</code> are available here. Home Assistant
          helpers are also available, such as
          <code>states('sensor.temperature')</code>,
          <code>state_attr('light.kitchen', 'brightness')</code>, and
          <code>is_state('binary_sensor.door', 'on')</code>.
        </div></main>
        </section>"
`;

exports[`alert editor interactions > previews unsaved data without requiring recipients 1`] = `
"id: draft_alert
name: Draft alert
enabled: true
description: ""
icon: mdi:bell-outline
triggers:
  - trigger: homeassistant
    event: start
conditions:
  - condition: template
    value_template: "{{ true }}"
notification:
  target: {}
  data:
    title: ""
    message: ""
confirmation:
  enabled: false
  buttons:
    - id: confirm
      label: Done
  notification:
    enabled: false
    data:
      message: ""
  reminders:
    enabled: false
    interval: 1800
    max_attempts: 5
    show_attempts: false
    forget_after_enabled: false
    timeout: 900
  actions: []
"
`;

exports[`alert editor interactions > renders the Basic editor section 1`] = `
{
  "buttons": [],
  "controls": [
    "ha-input",
    "ha-selector:Description",
    "ha-icon-picker:Icon",
  ],
  "help": [],
  "title": "Basic",
}
`;

exports[`alert editor interactions > renders the Conditions editor section 1`] = `
{
  "buttons": [],
  "controls": [
    "ha-notifications-code-editor:Conditions checked after a trigger:yaml:conditions-yaml-editor",
  ],
  "help": [
    "Conditions do not start an alert. They are checked after a built-in or additional trigger fires and determine whether the alert continues. YAML and JSON are supported. For numeric_state, include at least one of above or below. Home Assistant's numeric_state condition does not support for; use a state condition when you need a duration.",
  ],
  "title": "Conditions",
}
`;

exports[`alert editor interactions > renders the Confirmation editor section 1`] = `
{
  "buttons": [
    "Add response button",
  ],
  "controls": [
    "ha-input",
    "ha-input",
    "ha-switch",
  ],
  "help": [],
  "title": "Confirmation",
}
`;

exports[`alert editor interactions > renders the Notification editor section 1`] = `
{
  "buttons": [
    "Show template variables and sensor helpers",
  ],
  "controls": [
    "ha-input",
    "ha-notifications-code-editor:Notification message:jinja2",
  ],
  "help": [],
  "title": "Notification",
}
`;

exports[`alert editor interactions > renders the Notify recipients when confirmed editor section 1`] = `
{
  "buttons": [
    "Show template variables and sensor helpers",
  ],
  "controls": [
    "ha-notifications-code-editor:Confirmation message:jinja2",
  ],
  "help": [
    "Optionally send a follow-up message after acknowledgement.",
    "Example: Confirmed by {{confirmed_by}}",
  ],
  "title": "Notify recipients when confirmed",
}
`;

exports[`alert editor interactions > renders the Post-confirmation actions editor section 1`] = `
{
  "buttons": [],
  "controls": [
    "ha-notifications-code-editor:Post-confirmation actions:yaml:post-confirmation-actions",
  ],
  "help": [
    "Runs after a recipient confirms. Enter a YAML list of Home Assistant actions. JSON arrays also work because JSON is valid YAML.",
  ],
  "title": "Post-confirmation actions",
}
`;

exports[`alert editor interactions > renders the Post-send actions editor section 1`] = `
{
  "buttons": [],
  "controls": [
    "ha-notifications-code-editor:Post-send actions:yaml:post-send-actions",
  ],
  "help": [
    "Runs after every notification send. Enter a YAML list of Home Assistant actions. JSON arrays also work because JSON is valid YAML.",
  ],
  "title": "Post-send actions",
}
`;

exports[`alert editor interactions > renders the Recipients editor section 1`] = `
{
  "buttons": [
    "All",
    "Devices",
    "Areas",
    "Floors",
    "Labels",
    "Notification entities",
    "Users",
  ],
  "controls": [
    "ha-input",
  ],
  "help": [
    "Search for a recipient, choose a type when needed, then select it. You can mix devices, areas, labels, floors, and notification entities.",
    "Selected devices, areas, labels, floors, and notification entities are passed to Home Assistant's standard Notify service.",
  ],
  "title": "Recipients",
}
`;

exports[`alert editor interactions > renders the Reminder policy editor section 1`] = `
{
  "buttons": [],
  "controls": [
    "ha-notifications-duration-input:Remind every",
    "ha-input",
    "ha-notifications-duration-input:Forget after",
    "ha-switch",
    "ha-switch",
  ],
  "help": [
    "Set to 00:00:00 to keep the notification until confirmation.",
  ],
  "title": "Reminder policy",
}
`;

exports[`alert editor interactions > renders the Triggers editor section 1`] = `
{
  "buttons": [],
  "controls": [
    "ha-notifications-code-editor:Home Assistant triggers:yaml:triggers-yaml-editor",
  ],
  "help": [
    "Enter triggers as a YAML list, with each trigger starting with a dash. For example, state, event, and template triggers. Startup and repeat triggers are controlled above; Conditions are separate and only gate a triggered run.",
  ],
  "title": "Triggers",
}
`;

exports[`alert editor interactions > renders the When to run editor section 1`] = `
{
  "buttons": [],
  "controls": [
    "ha-switch:Startup trigger",
    "ha-switch:Repeat trigger",
    "ha-notifications-duration-input:Duration",
  ],
  "help": [
    "Configure the built-in startup and repeat triggers here. Add other Home Assistant trigger types under Triggers.",
    "Run this alert when Home Assistant starts.",
    "Re-evaluate the conditions on a repeating time pattern (default every 12 hours). Home Assistant aligns time patterns to the clock, so longer values are rounded to whole minutes or hours (up to 23), and 24 hours or more runs daily at midnight.",
  ],
  "title": "When to run",
}
`;

exports[`alert editor interactions > saves an edited alert and closes the editor 1`] = `
{
  "conditions": [
    {
      "condition": "template",
      "value_template": "{{ true }}",
    },
  ],
  "confirmation": {
    "actions": [],
    "buttons": [
      {
        "id": "confirm",
        "label": "Done",
      },
    ],
    "enabled": false,
    "notification": {
      "data": {
        "message": "",
      },
      "enabled": false,
    },
    "reminders": {
      "enabled": false,
      "forget_after_enabled": false,
      "interval": 1800,
      "max_attempts": 5,
      "show_attempts": false,
      "timeout": 900,
    },
  },
  "description": "",
  "enabled": true,
  "icon": "mdi:bell-outline",
  "id": "editable_alert",
  "name": "Updated name",
  "notification": {
    "action": "notify.phone",
    "data": {
      "message": "",
      "title": "",
    },
    "target": {
      "entity_id": [
        "notify.phone",
      ],
    },
  },
  "triggers": [
    {
      "event": "start",
      "trigger": "homeassistant",
    },
  ],
}
`;

exports[`alert editor interactions > shows validation feedback instead of saving an unnamed alert 1`] = `
"<div class="nc-toast">
          Name is required.
        </div>"
`;

exports[`alert editor interactions > switches active sections and keeps the contextual title 1`] = `"<h2 data-role="editor-section-title">When to run</h2>"`;

exports[`recipient picker interactions > filters recipients and removes a selected target 1`] = `
{
  "entity_id": [
    "notify.tablet",
  ],
}
`;

exports[`recipient picker interactions > serializes a selected notification entity and marks the editor dirty 1`] = `
{
  "entity_id": [
    "notify.phone",
  ],
}
`;

exports[`recipient picker interactions > serializes a selected notification entity and marks the editor dirty 2`] = `"<span class="nc-target-chip" title="Notification entities">Phone<button class="nc-chip-remove">Remove</button></span>"`;
